--- a/Exercicios/MyServer/MyServerConsole.dproj
+++ b/Exercicios/MyServer/MyServerConsole.dproj
@@ -128,6 +128,7 @@
         </DCCReference>
         <DCCReference Include="UPoolConnection.pas"/>
         <DCCReference Include="ProdutosClass.pas"/>
+        <DCCReference Include="ProdutosService.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
